--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,7 +16,9 @@ before:
     - go generate ./...
 
 builds:
-  - env:
+  - 
+    main: "."
+    env:
       - CGO_ENABLED=0
     goos:
       - linux
