--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,15 +10,9 @@ version: 1
 
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
-    - go generate ./...
-
 builds:
-  - 
-    main: "."
-    env:
+  - env:
       - CGO_ENABLED=0
     goos:
       - linux
