--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -18,7 +18,8 @@ builds:
       - linux
       - windows
       - darwin
-
+    ldflags:
+      - "-s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}} -X main.builtBy=goreleaser -X main.website=https://sinashabani.dev"
 archives:
   - format: tar.gz
     # this name template makes the OS and Arch compatible with the results of `uname`.
